--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@
 
 body {
   width: 100vw;
-  height: 100vh;
-  padding: 0.75rem 3rem;
+  padding: 1rem 3rem 1rem 3rem;
+  overflow-x: hidden;
   background-color: #263238;
   
 }
