--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,18 @@ body {
   background-color: #263238; 
 }
 
+@media only screen and (max-width: 1024px) {
+  #rounded-border {
+    display: none;
+  }
+
+  body {
+    padding: 1rem 1rem 1rem 0rem;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  body {
+    padding: 1rem 0;
+  }
+}
