--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,18 +15,19 @@ body {
   background-color: #263238; 
 }
 
-@media only screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
+  body {
+    padding: 1rem 1rem;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
   #rounded-border {
     display: none;
   }
 
   body {
-    padding: 1rem 1rem 1rem 0rem;
-  }
-}
+    padding: 0rem;
+  }  
 
-@media only screen and (max-width: 640px) {
-  body {
-    padding: 1rem 0;
-  }
 }
